--- a/src/pug/index.html
+++ b/src/pug/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Khan</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+                        Chennai· 9043361761 ·
                         <a href="mailto:name@email.com">mihashkh@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I'm an enthusiastic, responsible and hard working IT person. Being worked for different projects helped me to adopt to the changes quickly and made me a mature team worker. I am able to work well both in a team environment as well as using own initiative. I am able to work well under pressure and adhere to strict deadlines.</p>
