--- a/src/pug/index.html
+++ b/src/pug/index.html
@@ -115,6 +115,15 @@
                             <div class="subheading mb-3">HSC</div>
                             <p>Marks:1157/1200</p>
                         </div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">August 2002 - May 2006</span>
+                            <div class="d-flex flex-column flex-md-row justify-content-between"></div>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">SKV matriculation Higher Secondary School</h3>
+                            <div class="subheading mb-3">HSC</div>
+                            <p>Marks:1157/1200</p>
+                        </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
                 </div>
